Much progress stylizing and normalizing the node tables for basic crud operations.

--- a/ux/src/index.css
+++ b/ux/src/index.css
@@ -3,3 +3,9 @@
 @source "../.flowbite-react/class-list.json";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@layer base {
+  a {
+    @apply text-primary-600 dark:text-primary-500 font-medium hover:underline cursor-pointer;
+  }
+}
